organize project; add kubernetes post

--- a/content/posts/ci-cd-github-actions-dot-net-5/index.mdx
+++ b/content/posts/ci-cd-github-actions-dot-net-5/index.mdx
@@ -2,6 +2,7 @@
 title: CI/CD no Github Actions em aplicações .NET 5 com Docker
 description: Configurando CI/CD no Github Actions em aplicações .NET 5 com Docker.
 date: '2020-12-18'
+language: 'pt-br'
 ---
 
 Fala pessoal! Sabemos a quantidade de benefícios que encontramos 
