--- a/content/posts/kubernetes-use-local-docker-images-with-minikube/index.mdx
+++ b/content/posts/kubernetes-use-local-docker-images-with-minikube/index.mdx
@@ -1,7 +1,9 @@
 ---
-title: 'Kubernetes: Use local Docker images with Minikube'
-description: 'Use local Docker images with Minikube'
+title: 'Use local Docker images with Minikube'
+description: 'Use the Minikube Docker'
 date: '2024-10-29'
+tag: 'kubernetes, docker'
+language: 'en'
 ---
 
 In Minikube, you can load local Docker images into the Minikube environment directly.
