--- a/content/posts/useful-docker-commands/index.mdx
+++ b/content/posts/useful-docker-commands/index.mdx
@@ -2,6 +2,8 @@
 title: 'Usefull Docker Commands'
 description: 'Docker commands usually used'
 date: '2024-04-14'
+tag: 'docker'
+language: 'en'
 ---
 
 ### Start Docker
