add career; change blog page

--- a/content/pages/career.mdx
+++ b/content/pages/career.mdx
@@ -1,9 +1,10 @@
 ---
 title: Career
+description: A bit about my journey
 ---
 
-### Senior Software Engineer
-Itaú Unibanco, 2022 - Present
+### Itaú Unibanco
+Senior Software Engineer, 2022 - Present
 
 - Designed and implemented critical microservice applications for banking 
 transactions, ensuring performance and high availability for 28 million 
@@ -23,12 +24,12 @@ services for system optimization using C#, .NET, and Docker.
 AWS infrastructure. Conducted maintenance on legacy code and managed databases 
 to sustain operational efficiency.
 
-Skills: `Golang, C#, Microsoft .NET, Python, Amazon Web Services (AWS), Kubernetes, Apache Kafka, MySQL, SQL, Angular`
+Skills: __Golang • C# • Microsoft .NET • Python • Amazon Web Services (AWS) • Kubernetes • Apache Kafka • MySQL • SQL • Angular__
 
 ---
 
-### Backend Engineer
-BTG Pactual, 2021 - 2022
+### BTG Pactual
+Backend Engineer, 2021 - 2022
 
 - Implemented worker services processing millions of financial transactions daily, 
 ensuring alignment with expected standards. Used C#, .NET, Python, Amazon Web Services, 
@@ -41,3 +42,48 @@ teams.
 - Led the creation and maintenance of the Frontend built in Angular, aiming to 
 enhance the visualization of processed data and improve the overall user experience.
 
+Skills: __C# • .NET Core • Python • Amazon Web Services (AWS) • JavaScript • Azure DevOps Services • DynamoDB • HTML5 • CSS • MySQL • Angular__
+
+---
+
+### Educa Mais Brasil
+Systems Analyst, 2020 - 2021
+
+- Developed scalable APIs for integrating with external systems from partner companies to consume student scholarship data. Marketed partner-provided data on our student scholarship platform using C#, .NET Core, Entity Framework, ASP.NET Web API, Oracle Database, and PL/SQL.
+- Maintained APIs with legacy code and implemented new solutions to introduce additional features to existing systems in C#, .NET Framework, and Oracle Database.
+- Implemented new features in sales administration tools for student scholarships used by sales teams using Angular. Enhanced existing sales portals to improve the overall customer experience.
+- The applications were implemented using some project standards such as SOLID, DDD, Clean Architecture, and Clean Code.
+
+Skills: __C# • .NET Core • .NET Framework • Entity Framework • JavaScript • Oracle Database • PL/SQS • TFS • ASP.NET Web API • HTML5 • CSS • Angular__
+
+---
+
+### Solutis Tecnologia
+Systems Analyst, 2019 - 2020
+
+- Designed and implemented financial data processing APIs for clients in the Water and Sanitation sector in Bahia, Brazil, using technologies such as C#, .NET, and IBM DB2. Employed best practices and project standards, including Test-Driven Development (TDD) and Command Query Responsibility Segregation (CQRS).
+- Enhanced features within the dashboard for managing indicators, organizing and displaying data processed by the API. Developed interfaces using JavaScript and React.
+
+Skills: __C# • .NET Core • JavaScript • Entity Framework (EF) Core • ASP.NET Web API • IBM Db2 • HTML5 • CSS • React.js__
+
+---
+
+### Shopping Piedade
+IT Assistant, 2018 - 2019
+
+- Streamlined administrative processes by developing systems that seamlessly integrate with existing frameworks using technologies like C#, Microsoft .NET Core, Entity Framework, Microsoft SQL Server, and MVC to optimize the delivery of invoices to customers.
+- Orchestrated the administration of the computer network, leveraging Windows Server, to regulate internal user access.
+- Headed the support team overseeing the IT infrastructure, ensuring seamless operations and optimal performance.
+- Oversaw third-party systems integral to employee workflows, guaranteeing their functionality and actively managed databases utilizing Microsoft SQL Server.
+
+Skills: __C# • .NET Core • Entity Framework • Microsoft SQL Server • HTML5 • CSS__
+
+---
+
+### Shopping Piedade
+IT Intern, 2017 - 2018
+
+- Contributed to the seamless operation of the IT infrastructure by conducting maintenance, implementing hardware adjustments, and delivering support for existing applications.
+- Developed simple applications customized to internal requirements using tools such as C#, ASP.NET, and Microsoft SQL Server.
+
+Skills: __C# • .NET Core • Entity Framework • Microsoft SQL Server • HTML5 • CSS__
