add filter by tag in post page

--- a/content/posts/docker/useful-docker-commands.mdx
+++ b/content/posts/docker/useful-docker-commands.mdx
@@ -59,4 +59,4 @@ docker-compose up --force-recreate -d
 docker-compose up -d --remove-orphans
 ```
 
-Se isso foi útil para vocês, deixe me saber lá no [X/Twitter](https://www.x.com/bylucasqueiroz).
+Follow [X/Twitter](https://www.x.com/bylucasqueiroz).
