--- a/content/posts/dotnet/ci-cd-github-actions-dot-net-5.mdx
+++ b/content/posts/dotnet/ci-cd-github-actions-dot-net-5.mdx
@@ -3,6 +3,7 @@ title: CI/CD no Github Actions em aplicações .NET 5 com Docker
 description: Configurando CI/CD no Github Actions em aplicações .NET 5 com Docker.
 date: '2020-12-18'
 language: 'pt-br'
+tag: 'dotnet, docker, github'
 ---
 
 Fala pessoal! Sabemos a quantidade de benefícios que encontramos 
@@ -300,4 +301,4 @@ melhora muito a qualidade das nossas entregas, e implementar isso em projetos pe
   className="!relative"
 />
 
-Se isso foi útil para vocês, deixe me saber lá no [X/Twitter](https://www.x.com/bylucasqueiroz).
+Follow [X/Twitter](https://www.x.com/bylucasqueiroz).
