--- a/content/posts/kubernetes/kubectl-command-guide.mdx
+++ b/content/posts/kubernetes/kubectl-command-guide.mdx
@@ -329,3 +329,5 @@ kubectl apply -f <file_name>                 # Apply changes from a file
 kubectl run <pod_name> --image=nginx --restart=Never  # Run a single Nginx pod
 kubectl create svc nodeport <svc_name> --tcp=8080:80  # Create a NodePort service
 ```
+
+Follow [X/Twitter](https://www.x.com/bylucasqueiroz).
