--- a/content/posts/dotnet/ci-cd-github-actions-dot-net-5.mdx
+++ b/content/posts/dotnet/ci-cd-github-actions-dot-net-5.mdx
@@ -2,7 +2,7 @@
 title: CI/CD no Github Actions em aplicações .NET 5 com Docker
 description: Configurando CI/CD no Github Actions em aplicações .NET 5 com Docker.
 date: '2020-12-18'
-language: 'pt-br'
+language: 'pt'
 tag: 'dotnet, docker, github'
 ---
 
