color adjust on post page; change career page

--- a/content/pages/career.mdx
+++ b/content/pages/career.mdx
@@ -24,7 +24,7 @@ services for system optimization using C#, .NET, and Docker.
 AWS infrastructure. Conducted maintenance on legacy code and managed databases 
 to sustain operational efficiency.
 
-Skills: __Golang • C# • Microsoft .NET • Python • Amazon Web Services (AWS) • Kubernetes • Apache Kafka • MySQL • SQL • Angular__
+Skills: Golang • C# • Microsoft .NET • Python • Amazon Web Services (AWS) • Kubernetes • Apache Kafka • MySQL • SQL • Angular
 
 ---
 
@@ -42,7 +42,7 @@ teams.
 - Led the creation and maintenance of the Frontend built in Angular, aiming to 
 enhance the visualization of processed data and improve the overall user experience.
 
-Skills: __C# • .NET Core • Python • Amazon Web Services (AWS) • JavaScript • Azure DevOps Services • DynamoDB • HTML5 • CSS • MySQL • Angular__
+Skills: C# • .NET Core • Python • Amazon Web Services (AWS) • JavaScript • Azure DevOps Services • DynamoDB • HTML5 • CSS • MySQL • Angular
 
 ---
 
@@ -54,7 +54,7 @@ Systems Analyst, 2020 - 2021
 - Implemented new features in sales administration tools for student scholarships used by sales teams using Angular. Enhanced existing sales portals to improve the overall customer experience.
 - The applications were implemented using some project standards such as SOLID, DDD, Clean Architecture, and Clean Code.
 
-Skills: __C# • .NET Core • .NET Framework • Entity Framework • JavaScript • Oracle Database • PL/SQS • TFS • ASP.NET Web API • HTML5 • CSS • Angular__
+Skills: C# • .NET Core • .NET Framework • Entity Framework • JavaScript • Oracle Database • PL/SQS • TFS • ASP.NET Web API • HTML5 • CSS • Angular
 
 ---
 
@@ -64,7 +64,7 @@ Systems Analyst, 2019 - 2020
 - Designed and implemented financial data processing APIs for clients in the Water and Sanitation sector in Bahia, Brazil, using technologies such as C#, .NET, and IBM DB2. Employed best practices and project standards, including Test-Driven Development (TDD) and Command Query Responsibility Segregation (CQRS).
 - Enhanced features within the dashboard for managing indicators, organizing and displaying data processed by the API. Developed interfaces using JavaScript and React.
 
-Skills: __C# • .NET Core • JavaScript • Entity Framework (EF) Core • ASP.NET Web API • IBM Db2 • HTML5 • CSS • React.js__
+Skills: C# • .NET Core • JavaScript • Entity Framework (EF) Core • ASP.NET Web API • IBM Db2 • HTML5 • CSS • React.js
 
 ---
 
@@ -76,7 +76,7 @@ IT Assistant, 2018 - 2019
 - Headed the support team overseeing the IT infrastructure, ensuring seamless operations and optimal performance.
 - Oversaw third-party systems integral to employee workflows, guaranteeing their functionality and actively managed databases utilizing Microsoft SQL Server.
 
-Skills: __C# • .NET Core • Entity Framework • Microsoft SQL Server • HTML5 • CSS__
+Skills: C# • .NET Core • Entity Framework • Microsoft SQL Server • HTML5 • CSS
 
 ---
 
@@ -86,4 +86,4 @@ IT Intern, 2017 - 2018
 - Contributed to the seamless operation of the IT infrastructure by conducting maintenance, implementing hardware adjustments, and delivering support for existing applications.
 - Developed simple applications customized to internal requirements using tools such as C#, ASP.NET, and Microsoft SQL Server.
 
-Skills: __C# • .NET Core • Entity Framework • Microsoft SQL Server • HTML5 • CSS__
+Skills: C# • .NET Core • Entity Framework • Microsoft SQL Server • HTML5 • CSS
