--- a/content/posts/dotnet/how-to-ensure-thread-safeness-in-go.mdx
+++ b/content/posts/dotnet/how-to-ensure-thread-safeness-in-go.mdx
@@ -10,15 +10,15 @@ Working with multithreading we can encounter some challenges, one of them being 
 
 Mutex is known as Mutual Exclusion, allows us to lock and unlock a value while we are modifying it. This means the resource is locked during the update, and other processes must wait until the process is completed.
 
-Let's check the example
-
-## The scenario - Without Mutex
+## Without Mutex
 
 Here’s a code example without mutex. It’s a simple program that opens 10 goroutines, each incrementing a variable a thousand times. In this situation, we can encounter a race condition: multiple goroutines trying to update the same value simultaneously, which can lead to unpredictable results. Ideally, after the code runs, we should get 10.000 as the result (because 10 x 1000 = 10.000). But what actually happens? Look at the code.
 
 <GitHubCode language="go" url="https://raw.githubusercontent.com/bylucasqueiroz/goexamples/refs/heads/main/without-mutex/main.go" />
 
 As you can see, sometimes the result is correct. However, when I ran it multiple times, the issue appeared. This is the main problem, without synchronization or Mutex, there are race conditions, and during that time, you might see different results, like 7109. In production environments, we need to ensure consistent values for all processes.
+
+- Output
 
 ```bash
 lucas@queiroz:~/git/goexamples/mutex$ go run main.go 
@@ -35,13 +35,15 @@ lucas@queiroz:~/git/goexamples/mutex$ go run main.go
 Final Counter (without mutex): 10000
 ```
 
-## The solution - Using Mutex
+## With Mutex
 
 Now that you understand the problem, let’s see how to fix it. With Mutex we can lock a value before changing it, if another process tries to access the value, it will wait until the first interaction changing the value finishes. Here’s the code with Mutex applied:
 
 <GitHubCode language="go" url="https://raw.githubusercontent.com/bylucasqueiroz/goexamples/refs/heads/main/with-mutex/main.go" />
 
 As you can see, running multiple times, the result is the expected. This way, we can prevent race conditions and invalid results.
+
+- Output
 
 ```bash
 lucas@queiroz:~/git/goexamples/mutex$ go run main.go 
@@ -58,6 +60,6 @@ lucas@queiroz:~/git/goexamples/mutex$ go run main.go
 Final Counter (with mutex): 10000
 ```
 
-## The result
+## Conclusion
 
 In scenarios where values are shared between multiple goroutines and should be consistent across all of them, Mutex helps maintain data integrity by preventing race conditions and inconsistency results.
