change post folder

--- a/content/posts/go/how-to-ensure-thread-safeness-in-go.mdx
+++ b/content/posts/go/how-to-ensure-thread-safeness-in-go.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'How to ensure thread-safeness in Go'
+title: 'How to ensure thread-safety in Go'
 description: 'Working with Mutex to ensure thread-safeness in Go'
 date: '2024-11-13'
 tag: 'go'
